--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,9 @@ service: kripto
 custom:
   secrets: ${file(secrets.json)}
 
+plugins:
+  - serverless-pseudo-parameters
+
 provider:
   name: aws
   stage: prod
