--- a/serverless.yml
+++ b/serverless.yml
@@ -3,9 +3,6 @@ service: kripto
 custom:
   secrets: ${file(secrets.json)}
 
-plugins:
-  - serverless-pseudo-parameters
-
 provider:
   name: aws
   stage: prod
@@ -17,11 +14,11 @@ provider:
       Action:
         - "sqs:SendMessage"
         - "sqs:GetQueueUrl"
-      Resource: "arn:aws:sqs:${self:provider.region}:#{AWS::AccountId}:RateUpdate"
+      Resource: "arn:aws:sqs:${self:provider.region}:${self:provider.awsAccountId}:RateUpdate"
     - Effect: "Allow"
       Action:
         - "sqs:ListQueues"
-      Resource: "arn:aws:sqs:${self:provider.region}:#{AWS::AccountId}:*"
+      Resource: "arn:aws:sqs:${self:provider.region}:${self:provider.awsAccountId}:*"
     - Effect: Allow
       Action:
         - lambda:InvokeFunction
@@ -30,7 +27,7 @@ provider:
     MONGO_URI: ${self:custom.secrets.mongoUri}
     TOKEN: ${self:custom.secrets.token}
     REGION: ${self:provider.region}
-    AWS_ACCOUNT_ID: "#{AWS::AccountId}"
+    AWS_ACCOUNT_ID: ${self:provider.awsAccountId}
 
 package:
   exclude:
@@ -70,10 +67,10 @@ functions:
               - RateUpdate
               - Arn
   rate-retriever:
-    runtime: nodejs8.10
+    runtime: nodejs12.x
     handler: services/rate-retriever.handler
     environment:
-      QUEUE_URL: "https://sqs.${self:provider.region}.amazonaws.com/#{AWS::AccountId}/RateUpdate"
+      QUEUE_URL: "https://sqs.${self:provider.region}.amazonaws.com/${self:provider.awsAccountId}/RateUpdate"
       COINBASE_API_KEY: ${self:custom.secrets.coinbaseApiKey}
       COINBASE_SECRET_KEY: ${self:custom.secrets.coinbaseSecretKey}
     events:
