--- a/serverless.yml
+++ b/serverless.yml
@@ -28,6 +28,7 @@ provider:
     TOKEN: ${self:custom.secrets.token}
     REGION: ${self:provider.region}
     AWS_ACCOUNT_ID: ${self:custom.secrets.awsAccountId}
+    LUMIGO_TOKEN: ${self:custom.secrets.lumigoToken}
 
 package:
   exclude:
