--- a/services/rate-retriever/package.json
+++ b/services/rate-retriever/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@lumigo/tracer": "^1.35.1",
     "aws-sdk": "^2.677.0",
     "coinbase": "^2.0.8",
     "uuid": "^8.0.0"
